image upload logic changed
